# ms2cc

./: .clangd.template  .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  TESTING_STRATEGY.md  errors.txt  release.toml
.github/workflows/: windows-release.yml
benches/: parsing_benchmarks.rs
debug/: dump_tokens.rs
docs/: CLANGD_USAGE.md
src/: cli.rs  command_builder.rs  config.rs  error.rs  fs_index.rs  lib.rs  log_scan.rs  main.rs  pipeline.rs
tests/: README.md  cli_smoke_tests.rs  error_handling_tests.rs  file_system_tests.rs  integration_tests.rs  main_function_tests.rs
tests/fixtures/: nested_dependencies.expected.json  parallel_build.expected.json  sequential_build.expected.json
