[package]
name = "ms2cc"
version = "1.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "string"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
jwalk = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.23.0"
criterion = "0.7.0"

[[bench]]
name = "parsing_benchmarks"
harness = false
