[package]
name = "ms2cc"
version = "2.1.2"
description = "Convert MSBuild logs to compile_commands.json for C/C++ language servers"
edition = "2024"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
log = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
