[package]
name = "ms2cc"
version = "3.0.0"
description = "Convert MSBuild logs to compile_commands.json for C/C++ language servers"
edition = "2024"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
indicatif-log-bridge = "0.2"
log = "0.4"
regex = "1.12"
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tempfile = "3.15"
